# 4XPrima

./: .env.example  .gitignore  CLAUDE.md  PLAN.md  README.md  pyproject.toml
api/: __init__.py  config.py  main.py  serializers.py  store.py
api/tests/: conftest.py  test_endpoints.py
core/: __init__.py  broker.py  config.py  context_data.py  execution.py  llm_client.py  market_data.py  models.py  paper_broker.py  risk_manager.py  strategy.py  usage_accounting.py
core/agents/: __init__.py  backtest_agent.py  backtest_harness.py  cost.py  critic_agent.py  evaluation.py  market_context_agent.py  reporting_agent.py  runner.py  strategy_lab_agent.py  types.py
core/analysis/: __init__.py  economics.py  pair_screener.py
core/backtest/: __init__.py  costs.py  engine.py  metrics.py  types.py  walkforward.py
core/orchestration/: __init__.py  approval_queue.py  artifact_store.py  orchestrator.py  registry.py
docs/: architecture.md  llm-conventions.md  quality-debt.md  type-debt.md  webapp.md
scripts/: check.sh  run_backtest_agent.py  run_critic.py  run_market_context.py  run_orchestrator.py  run_pair_screen.py  run_reporting.py  run_strategy_lab.py  safety_scan.sh  seed_demo_dashboard.py  typecheck.sh
skills/backtesting-methodology/: SKILL.md
skills/forex-cost-modeling/: SKILL.md
skills/market-context-format/: SKILL.md
skills/overfitting-checklist/: SKILL.md
skills/prompt-caching-and-token-budget/: SKILL.md
skills/risk-management-rules/: SKILL.md
specs/agents/: backtest_agent.md  critic_agent.md  market_context_agent.md  optimization_agent.md  orchestrator_agent.md  reporting_agent.md  strategy_lab_agent.md
specs/components/: risk_manager.md
tests/: conftest.py  test_agent_evaluation.py  test_agent_output_schemas.py  test_agent_runner.py  test_backtest_agent.py  test_backtest_artifacts.py  test_backtest_costs.py  test_backtest_engine.py  test_backtest_metrics.py  test_backtest_walkforward.py  test_context_data.py  test_critic_agent.py  test_economics.py  test_execution.py  test_llm_client.py  test_market_context_agent.py  test_oanda_provider.py  test_orchestrator.py  test_pair_screener.py  test_paper_broker.py  test_reporting_agent.py  test_risk_manager.py  test_strategy.py  test_strategy_lab_agent.py
tests/fixtures/: ff_calendar_thisweek.json  fred_observations_cpi.json  gdelt_doc_search.json  market_context_report_sample.json  oanda_candles_eurusd_h1.json  oanda_pricing_eurusd.json  strategy_proposal_sample.json
web/: DESIGN.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.ts
web/src/: App.tsx  index.css  main.tsx
web/src/components/: ConcernList.tsx  EconomicFlagBadge.tsx  EquityCurveChart.tsx  Layout.tsx  MetricComparison.tsx  PageHeader.tsx  SampleCaveat.tsx  StateViews.tsx  status.tsx
web/src/components/ui/: badge.tsx  card.tsx  misc.tsx  table.tsx
web/src/hooks/: useApi.ts
web/src/lib/: api.ts  caveats.ts  format.ts  types.ts
web/src/test/: ApprovalQueueView.test.tsx  BacktestsView.test.tsx  CyclesView.test.tsx  EconomicsView.test.tsx  RegistryView.test.tsx  UniverseView.test.tsx  fixtures.ts  setup.ts  utils.tsx
web/src/views/: ApprovalQueueView.tsx  BacktestDetailView.tsx  BacktestsView.tsx  CycleDetailView.tsx  CyclesView.tsx  EconomicsView.tsx  RegistryView.tsx  UniverseView.tsx
